favicon and little fixs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: page
 title: Hello World
+share-description: Welcome to my little corner of the internet!
 ---
 
 <p>
-Welcome to my little corner of the internet. This website shows up some of my projects. 
+Welcome to my little corner of the internet! This website shows some of my projects. 
 Feel free to look around, there might be a gif or two you might like.
 </p>
 
